Minor change from Radha to correct formatting of upscalex/upscaley.

--- a/extensions/vx_khr_nn/1.2.1/vx_khr_nn_1_2_1.html
+++ b/extensions/vx_khr_nn/1.2.1/vx_khr_nn_1_2_1.html
@@ -843,7 +843,7 @@ table.CodeRay td.code>pre{padding:0}
 <span id="author" class="author">The Khronos OpenVX Working Group</span><br>
 <span id="author2" class="author">Editors: Tomer Schwartz, Mostafa Hagog, Radhakrishna Giduthuri</span><br>
 <span id="revnumber">version 1.2.1,</span>
-<span id="revdate">Wed, 11 Jul 2018 06:06:50 +0000</span>
+<span id="revdate">Mon, 23 Jul 2018 04:37:03 +0000</span>
 <br><span id="revremark">Git branch information not available</span>
 </div>
 <div id="toc" class="toc2">
@@ -1383,11 +1383,11 @@ The legal string combinations are <code>"KHR_NN_8"</code> or <code>"KHR_NN_8 KHR
 <tbody>
 <tr>
 <td class="tableblock halign-left valign-middle"><p class="tableblock">a_x</p></td>
-<td class="tableblock halign-left valign-middle"><p class="tableblock">user-specified quantity used to distinguish between the \(upscale_x\) different possible output sizes.</p></td>
+<td class="tableblock halign-left valign-middle"><p class="tableblock">user-specified quantity used to distinguish between the <em><span class="eq">upscale<sub>x</sub></span></em> different possible output sizes.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-middle"><p class="tableblock">a_y</p></td>
-<td class="tableblock halign-left valign-middle"><p class="tableblock">user-specified quantity used to distinguish between the \(upscale_y\) different possible output sizes.</p></td>
+<td class="tableblock halign-left valign-middle"><p class="tableblock">user-specified quantity used to distinguish between the <em><span class="eq">upscale<sub>y</sub></span></em> different possible output sizes.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-middle"><p class="tableblock">overflow_policy</p></td>
@@ -2667,7 +2667,7 @@ Any possible errors preventing a successful creation should be checked using
 <div id="footer">
 <div id="footer-text">
 Version 1.2.1<br>
-Last updated 2018-07-10 23:05:38 PDT
+Last updated 2018-07-22 21:36:59 PDT
 </div>
 </div>
 
